    (thanks, Wartan Hachaturow).
  * Filter udeb dependencies based on Kernel-Version and Subarchitecture
    (closes: #490634).
  * Filter out packages that don't match KERNELVERSION from downloaded
    Packages files. Despite the above change, apt still seems to want to
    pull in multiple providers of virtual packages, which causes problems
    otherwise.

  [ Martin Michlmayr ]
  * Remove support for the old arm port.
  * Convert the Thecus N2100 image to an initramfs.
  * Include minix-modules on the orion5x image for the D-Link DNS-323,
    thanks Matt Palmer.
  * Generate images for the D-Link DNS-323 and Conceptronic CH3SNAS,
    thanks Matt Palmer.  Closes: #503040.
  * Use the 2.6.29 kernel on armel, mips and mipsel.
  * Add images for the Marvell Kirkwood platform, including images for
    the QNAP TS-119, TS-219 and TS-219P, and SheevaPlug.
  * Remove Broadcom SWARM (sb1-bcm91250a) support since since few devices
    remain out there and debian-installer support is likely broken anyway.
  * Remove Broadcom Bigsur (sb1a-bcm91480b) support since debian-installer
    support never worked.

  [ Wartan Hachaturow ]
  * Add CHRP boot structure on ISO images, Closes: #411728, #411203.
  * Add monolithic support for powerpc64.
  * Use 2.6.29 kernel on powerpc/powerpc64.

  [ Otavio Salvador ]
  * Bump kernels to use new 2.6.26-2 kernels.

  [ Christian Perrier ]
  * Add needed characters for Kirghiz.
  * Take care to drop System.map after moving the kernel to the top of the
    tree and before removing the /boot directory there.

  [ Frans Pop ]
  * Drop support for the ppc64 architecture.

  [ Stephen R. Marenka ]
  * Move m68k to 2.6.29-1.

  [ dann frazier ]
  * Use 2.6.29-2 kernel on ia64.

  [ Frans Pop ]
  * Switch to 2.6.29-2 kernel for hppa.

  [ Ian Campbell ]
  * Add netboot-xen images for amd64.
  * Add cdrom-xen images for i386 and amd64.

  [ Otavio Salvador ]
  * Switch to 2.6.29-2 kernel for amd64 and i386.

  [ Aurelien Jarno ]