@@ -1,7 +1,7 @@
 SUBARCH_SUPPORTED = iop32x ixp4xx kirkwood orion5x versatile ads
 
 KERNELMAJOR = 2.6
-KERNELVERSION = 2.6.30-1
+KERNELVERSION = 2.6.30-2
 KERNEL_FLAVOUR = di
 KERNELIMAGEVERSION = $(KERNELVERSION)
 KERNELNAME = $(foreach ver,$(KERNELVERSION),vmlinuz-$(ver))
