@@ -1,0 +1,41 @@
+MEDIA_TYPE = netboot image
+
+TARGET = $(TEMP_INITRD) $(TEMP_KERNEL) openrd-base openrd-client sheevaplug
+EXTRANAME = $(MEDIUM)
+
+# OpenRD-Base
+openrd-base:
+	mkdir -p $(SOME_DEST)/$(EXTRANAME)/openrd-base
+	mkdir -p $(TEMP)/openrd-base
+	# Set machine id 2325 (0x0915)
+	devio > $(TEMP)/openrd-base/kernel 'wl 0xe3a01c09,4' 'wl 0xe3811015,4'
+	cat $(TEMP_KERNEL) >> $(TEMP)/openrd-base/kernel
+	mkimage -A arm -O linux -T kernel -C none -a 0x00008000 -e 0x00008000 -n "Debian kernel" -d $(TEMP)/openrd-base/kernel $(SOME_DEST)/$(EXTRANAME)/openrd-base/uImage
+	mkimage -A arm -O linux -T ramdisk -C gzip -a 0x0 -e 0x0 -n "debian-installer ramdisk" -d $(TEMP_INITRD) $(SOME_DEST)/$(EXTRANAME)/openrd-base/uInitrd
+	update-manifest $(SOME_DEST)/$(EXTRANAME)/openrd-base/uImage "Linux kernel for OpenRD-Client"
+	update-manifest $(SOME_DEST)/$(EXTRANAME)/openrd-base/uInitrd "initrd for OpenRD-Base"
+
+# OpenRD-Client
+openrd-client:
+	mkdir -p $(SOME_DEST)/$(EXTRANAME)/openrd-client
+	mkdir -p $(TEMP)/openrd-client
+	# Set machine id 2361 (0x0939)
+	devio > $(TEMP)/openrd-client/kernel 'wl 0xe3a01c09,4' 'wl 0xe3811039,4'
+	cat $(TEMP_KERNEL) >> $(TEMP)/openrd-client/kernel
+	mkimage -A arm -O linux -T kernel -C none -a 0x00008000 -e 0x00008000 -n "Debian kernel" -d $(TEMP)/openrd-client/kernel $(SOME_DEST)/$(EXTRANAME)/openrd-client/uImage
+	mkimage -A arm -O linux -T ramdisk -C gzip -a 0x0 -e 0x0 -n "debian-installer ramdisk" -d $(TEMP_INITRD) $(SOME_DEST)/$(EXTRANAME)/openrd-client/uInitrd
+	update-manifest $(SOME_DEST)/$(EXTRANAME)/openrd-client/uImage "Linux kernel for OpenRD-Client"
+	update-manifest $(SOME_DEST)/$(EXTRANAME)/openrd-client/uInitrd "initrd for OpenRD-Client"
+
+# SheevaPlug
+sheevaplug:
+	mkdir -p $(SOME_DEST)/$(EXTRANAME)/sheevaplug
+	mkdir -p $(TEMP)/sheevaplug
+	# Set machine id 2097 (0x0831)
+	devio > $(TEMP)/sheevaplug/kernel 'wl 0xe3a01c08,4' 'wl 0xe3811031,4'
+	cat $(TEMP_KERNEL) >> $(TEMP)/sheevaplug/kernel
+	mkimage -A arm -O linux -T kernel -C none -a 0x00008000 -e 0x00008000 -n "Debian kernel" -d $(TEMP)/sheevaplug/kernel $(SOME_DEST)/$(EXTRANAME)/sheevaplug/uImage
+	mkimage -A arm -O linux -T ramdisk -C gzip -a 0x0 -e 0x0 -n "debian-installer ramdisk" -d $(TEMP_INITRD) $(SOME_DEST)/$(EXTRANAME)/sheevaplug/uInitrd
+	update-manifest $(SOME_DEST)/$(EXTRANAME)/sheevaplug/uImage "Linux kernel for SheevaPlug"
+	update-manifest $(SOME_DEST)/$(EXTRANAME)/sheevaplug/uInitrd "initrd for SheevaPlug"
+
