@@ -9,7 +9,7 @@ GRUB_FONT=/usr/share/grub/ascii.pf2
 
 # GRUB modules
 GRUB_MODDIR=/usr/lib/grub/i386-pc
-GRUB_MODULES=biosdisk minicmd normal sh echo iso9660 bsd chain gfxterm vbe png
+GRUB_MODULES=biosdisk bsd chain echo gfxterm handler iso9660 minicmd normal png sh gfxterm vbe
 
 # Unsupported targets
 arch_boot_screens:
