@@ -62,6 +62,7 @@ sub apt_cache {
 	
 	return `LANG=C apt-cache \\
 		-o Dir::Etc::sourcelist=./$sourceslist \\
+		-o Dir::Etc::sourceparts=/dev/null \\
 		-o Dir::Etc::Preferences=./preferences.udeb.local \\
 		-o Dir::State=./apt.udeb/state \\
 		-o Dir::State::Status=./apt.udeb/state/status \\
