@@ -13,7 +13,7 @@ arch       kernel udebs      module udebs      build/config
 i386       2.6.30 (-6)      2.6.30-1 (-3)     2.6.30-1
 alpha      2.6.30 (-6)      2.6.30-1 (-3)     2.6.30-1
 amd64      2.6.30 (-6)      2.6.30-1 (-3)     2.6.30-1
-armel      2.6.30 (-6)      2.6.26-1 (-6)     2.6.30-1
+armel      2.6.30 (-8)      2.6.30-2 (-8)     2.6.30-2
 hppa       2.6.30 (-6)      2.6.30-1 (-3)     2.6.30-1
 ia64       2.6.30 (-6)      2.6.30-1 (-3)     2.6.30-1
 m68k       2.6.26-1 (-7)      2.6.21-2 (  ) [1] 2.6.26-1
