@@ -90,12 +90,12 @@
 		code="ar"
 		code3="arb"
 		english_name="Arabic"
-		bkp_coord_name="Ossama Khayat"
-		bkp_coord_email="okhayat@yahoo.com"
-		bkp_coord_account=""
-		coord_name="Mohamed Adnène Trojette"
-		coord_email="adn+deb@diwi.org"
-		coord_account="adn-guest"
+		coord_name="Ossama Khayat"
+		coord_email="okhayat@yahoo.com"
+		coord_account="okhayat-guest"
+		bkp_coord_name="Mohamed Adnène Trojette"
+		bkp_coord_email="adn+deb@diwi.org"
+		bkp_coord_account="adn-guest"
 		coord_gpg="0x0ED704EA"
 		manual_coord_name=""
 		manual_coord_email=""
